# ai-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: release.yml
companions/ai-memory-importer/: Cargo.toml  README.md
companions/ai-memory-importer/src/: main.rs
crates/ai-memory-cli/: Cargo.toml
crates/ai-memory-cli/src/: auth.rs  cli.rs  config.rs  http_client.rs  logging.rs  main.rs
crates/ai-memory-cli/src/commands/: auth.rs  bootstrap.rs  forget_sweep.rs  hook.rs  hook_capture.rs  hook_drain_process.rs  hook_spool.rs  init.rs  install_hooks.rs  install_instructions.rs  install_mcp.rs  install_skills.rs  lint.rs  mod.rs  move_project.rs  openclaw_plugin.rs  render_shared.rs  restore.rs  search.rs  serve.rs  setup_agent.rs  status.rs  uninstall.rs  write_page.rs
crates/ai-memory-cli/templates/: config.default.toml
crates/ai-memory-cli/tests/: autoscope_env.rs  install_instructions.rs  packaging.rs  removal.rs  routing_instructions.rs
crates/ai-memory-consolidate/: Cargo.toml
crates/ai-memory-consolidate/src/: auto_improve.rs  consolidator.rs  lib.rs  lint.rs  projection.rs  sweep.rs
crates/ai-memory-consolidate/tests/: embeddings.rs  recall_eval.rs
crates/ai-memory-core/src/: actor.rs  ids.rs  (+5 more)
crates/ai-memory-hooks/: Cargo.toml
crates/ai-memory-mcp/: Cargo.toml
crates/ai-memory-store/: Cargo.toml
docker/: Dockerfile
docs/: ARCHITECTURE.md  admission-webhooks.md  auto-improvement-loop.md  auto-scope.md  companion-crates.md  deploy.md  design-decisions.md  frontend-api.md  https-via-proxy.md  install.md  lifecycle-ops.md  macos.md  marker-file.md  mcp-install.md  usage.md  users.md  windows.md
evals/src/: main.rs
hooks/: _lib.sh
hooks/claude-code/: session-start.sh  subagent-start.ps1  subagent-start.sh  subagent-stop.ps1  subagent-stop.sh
hooks/devin/: post-compaction.ps1  post-compaction.sh  post-tool-use.ps1  post-tool-use.sh  pre-tool-use.ps1  pre-tool-use.sh  session-end.ps1  session-end.sh  session-start.ps1  session-start.sh  stop.ps1  stop.sh  user-prompt-submit.ps1  user-prompt-submit.sh
hooks/grok/: subagent-start.ps1  subagent-start.sh  subagent-stop.ps1  subagent-stop.sh
hooks/kimi-code/: post-tool-use.ps1  post-tool-use.sh  pre-compact.ps1  pre-compact.sh  pre-tool-use.ps1  pre-tool-use.sh  session-end.ps1  session-end.sh  session-start.ps1  session-start.sh  stop.ps1  stop.sh  subagent-start.ps1  subagent-start.sh  subagent-stop.ps1  subagent-stop.sh  user-prompt-submit.ps1  user-prompt-submit.sh
hooks/lib/: ai-memory-hook.ps1
packaging/aur/: PKGBUILD  PKGBUILD-bin
scripts/: install-hooks.sh
tests/hooks/: test_lib.sh
(+60 files in other folders)
