[package]
name = "ai-memory-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "`ai-memory` binary entry point."

[[bin]]
name = "ai-memory"
path = "src/main.rs"

[dependencies]
ai-memory-core.workspace = true
ai-memory-store.workspace = true
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
figment.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
